// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. EventAction:dialog args 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <span>
                打开弹窗
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget amis-Modal amis-Modal--1th"
    data-amis-theme="cxd"
    role="dialog"
  >
    <div
      class="amis-Modal-overlay in"
    />
    <div
      class="amis-Modal-content in"
    >
      <div
        class="amis-Modal-header"
      >
        <a
          class="amis-Modal-close"
          data-position="left"
          data-tooltip="关闭"
        >
          <icon-mock
            classname="icon icon-close"
            icon="close"
          />
        </a>
        <div
          class="amis-Modal-title"
        >
          模态弹窗
        </div>
      </div>
      <div
        class="amis-Modal-body"
        role="dialog-body"
      >
        <button
          class="amis-Button amis-Button--default amis-Button--size-default"
          type="button"
        >
          <span>
            打开子弹窗
          </span>
        </button>
        <button
          class="amis-Button amis-Button--default amis-Button--size-default ml-2"
          type="button"
        >
          <span>
            关闭当前弹窗
          </span>
        </button>
        <button
          class="amis-Button amis-Button--default amis-Button--size-default ml-2"
          type="button"
        >
          <span>
            触发确认
          </span>
        </button>
        <button
          class="amis-Button amis-Button--default amis-Button--size-default ml-2"
          type="button"
        >
          <span>
            触发取消
          </span>
        </button>
      </div>
      <div
        class="amis-Modal-footer"
      >
        <button
          class="amis-Button amis-Button--default amis-Button--size-default"
          type="button"
        >
          <span>
            取消
          </span>
        </button>
        <button
          class="amis-Button amis-Button--primary amis-Button--size-default"
          type="button"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`1. EventAction:dialog args 2`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <span>
                打开弹窗
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`1. EventAction:dialog args 3`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <span>
                打开弹窗
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`1. EventAction:dialog args 4`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <span>
                打开弹窗
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`1. EventAction:dialog args 5`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <span>
                打开弹窗
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`1. EventAction:dialog args 6`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <span>
                打开弹窗
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`1. EventAction:dialog args 7`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <span>
                打开弹窗
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`2. EventAction:dialog 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <span>
                打开弹窗
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget amis-Modal amis-Modal--1th"
    data-amis-theme="cxd"
    role="dialog"
  >
    <div
      class="amis-Modal-overlay in"
    />
    <div
      class="amis-Modal-content in"
    >
      <div
        class="amis-Modal-header"
      >
        <a
          class="amis-Modal-close"
          data-position="left"
          data-tooltip="关闭"
        >
          <icon-mock
            classname="icon icon-close"
            icon="close"
          />
        </a>
        <div
          class="amis-Modal-title"
        >
          模态弹窗
        </div>
      </div>
      <div
        class="amis-Modal-body"
        role="dialog-body"
      >
        <button
          class="amis-Button amis-Button--default amis-Button--size-default"
          type="button"
        >
          <span>
            打开子弹窗
          </span>
        </button>
        <button
          class="amis-Button amis-Button--default amis-Button--size-default ml-2"
          type="button"
        >
          <span>
            关闭当前弹窗
          </span>
        </button>
        <button
          class="amis-Button amis-Button--default amis-Button--size-default ml-2"
          type="button"
        >
          <span>
            触发确认
          </span>
        </button>
        <button
          class="amis-Button amis-Button--default amis-Button--size-default ml-2"
          type="button"
        >
          <span>
            触发取消
          </span>
        </button>
      </div>
      <div
        class="amis-Modal-footer"
      >
        <button
          class="amis-Button amis-Button--default amis-Button--size-default"
          type="button"
        >
          <span>
            取消
          </span>
        </button>
        <button
          class="amis-Button amis-Button--primary amis-Button--size-default"
          type="button"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`2. EventAction:dialog 2`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <span>
                打开弹窗
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`2. EventAction:dialog 3`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <span>
                打开弹窗
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`2. EventAction:dialog 4`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <span>
                打开弹窗
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`2. EventAction:dialog 5`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <span>
                打开弹窗
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`2. EventAction:dialog 6`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <span>
                打开弹窗
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`2. EventAction:dialog 7`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <span>
                打开弹窗
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
